--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,16 @@
 .wrapper {text-alaign: center;}
+ul {
+list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: block;
+  width: 60px}
+li {
+     float: left;
+ }
+
+ a {
+     display: block;
+     padding: 8px;
+   
+ }
