--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 #blurb {
-  display: block;
-  float: center;}
+  margin: auto;
+     width: 50%;
+    padding: 10px;}
 ul {
 list-style-type: none;
   margin: 0;
